@@ -72,6 +72,7 @@
     * 1130 esx monitoring: agent_vsphere now retrieves additional data (used by HW-inventory)...
     * 1422 agent_vsphere: now able to configure where the power state of a vm or esx-host should be assigned...
     * 1442 ups_socomec_out_source: New check for checking the power source of out phases for Socomec UPSs
+    * 0662 domino_mailqueues: new check to monitor mail queues in Lotus Domino
     * 1051 FIX: tcp_conn_stats: fix missing performance data...
     * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
     * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
